Fixes social links positioning on mobile landing page.

--- a/src/App.css
+++ b/src/App.css
@@ -211,5 +211,9 @@ footer {
     img {
         max-width: 300px;
     }
+
+    .social-links {
+        width: 50%;
+    }
 }
 
